--- a/MovieReviewApp/app/src/main/res/navigation/navigation_main.xml
+++ b/MovieReviewApp/app/src/main/res/navigation/navigation_main.xml
@@ -35,6 +35,12 @@
         android:label="@string/title_movie_reviews"
         tools:layout="@layout/fragment_movie_reviews">
 
+        <argument
+            android:name="movie"
+            app:argType="com.example.moviereviewapp.domain.model.Movie" />
+
     </fragment>
+
+
 
 </navigation>
